force-app/main/default/objects/MEDDPICC_Assessment__c/MEDDPICC_Assessment__c.object-meta.xml
<CustomObject>
    <description>Houses MEDDPICC qualification data synced from Clari for deal intelligence and AI-powered analysis.</description>
    <label>MEDDPICC Assessment</label>
    <nameField>
        <displayFormat>MEDDPICC-{00000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MEDDPICC Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>