force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <description>The internal advocate who has power and influence to drive the deal. Who is selling on our behalf inside the organization?</description>
    <label>Champion</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>