force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Known competitive landscape. Who else is being evaluated and what is our differentiation strategy?</description>
    <label>Competition</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>