force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>The formal criteria used to evaluate and compare vendors. Technical, business, and financial requirements.</description>
    <label>Decision Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>