force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>The process by which the organization makes purchasing decisions. Timeline, steps, approvals, and stakeholders involved.</description>
    <label>Decision Process</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>