force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <description>The person with veto power and budget authority. Have we identified and engaged the economic buyer?</description>
    <label>Economic Buyer</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>