force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <description>The identified business pain that drives urgency. What problem is the customer trying to solve and what happens if they do nothing?</description>
    <label>Identify Pain</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>