force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Last_Clari_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Clari_Sync__c</fullName>
    <label>Last Clari Sync</label>
    <type>DateTime</type>
</CustomField>