force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>Quantifiable measures of the business problem or desired outcome. What economic impact does solving this problem have?</description>
    <label>Metrics</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>