force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MEDDPICC Assessments</relationshipLabel>
    <relationshipName>MEDDPICC_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>