force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>Average of all 8 MEDDPICC dimension scores (0-10 scale)</description>
    <formula>(
        BLANKVALUE(Score_Metrics__c, 0) +
        BLANKVALUE(Score_Economic_Buyer__c, 0) +
        BLANKVALUE(Score_Decision_Criteria__c, 0) +
        BLANKVALUE(Score_Decision_Process__c, 0) +
        BLANKVALUE(Score_Paper_Process__c, 0) +
        BLANKVALUE(Score_Identify_Pain__c, 0) +
        BLANKVALUE(Score_Champion__c, 0) +
        BLANKVALUE(Score_Competition__c, 0)
    ) / 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>