force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process__c</fullName>
    <description>The legal and procurement process for getting a deal signed. Contracts, legal review, procurement steps, and approval chain.</description>
    <label>Paper Process</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>