force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Score_Champion__c.field-meta.xml
<CustomField>
    <fullName>Score_Champion__c</fullName>
    <label>Champion Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>