force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Score_Competition__c.field-meta.xml
<CustomField>
    <fullName>Score_Competition__c</fullName>
    <label>Competition Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>