force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Score_Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Score_Decision_Process__c</fullName>
    <label>Decision Process Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>