force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Score_Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Score_Economic_Buyer__c</fullName>
    <label>Economic Buyer Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>