force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Score_Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Score_Identify_Pain__c</fullName>
    <label>Identify Pain Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>