force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Score_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Score_Metrics__c</fullName>
    <label>Metrics Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>