force-app/main/default/objects/MEDDPICC_Assessment__c/fields/Synced_From_Clari__c.field-meta.xml
<CustomField>
    <fullName>Synced_From_Clari__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced From Clari</label>
    <type>Checkbox</type>
</CustomField>